// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Footer /> displays the current year 1`] = `
<p>
  © 2021 Dalton Craven | View source on 
  <a
    href="https://github.com/cravend/site"
  >
    GitHub
  </a>
</p>
`;

exports[`<Footer /> renders 1`] = `
<div>
  <footer>
    <div>
      <p>
        © 2021 Dalton Craven | View source on 
        <a
          href="https://github.com/cravend/site"
        >
          GitHub
        </a>
      </p>
    </div>
  </footer>
</div>
`;
